test/compile-fail/resolution/pub/in-non-ancestral-super/expected.txt
error: `c` is not an ancestor of `super`
  ┌─ ./test/compile-fail/resolution/pub/in-non-ancestral-super/top.rhdl:2:19
  │
2 │     pub(in super::c) struct b {}
  │                   ^
  │
  = visibility can only be restricted to an ancestral path

